World zero button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 
   <div id="ui">
     <button id="startBtn">Start AR</button>
-    <button id="debugToggle" aria-pressed="false" hidden>Show Debug</button>
+    <div id="arControls" hidden>
+      <button id="worldZeroBtn" type="button" hidden>World Zero</button>
+      <button id="debugToggle" type="button" aria-pressed="false" hidden>Show Debug</button>
+    </div>
     <div id="status">Idle</div>
   </div>
 
