Removed landing page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <canvas id="threeCanvas"></canvas>
 
   <div id="ui">
-    <button id="startBtn">Start AR</button>
+    <button id="startBtn" hidden>Start AR</button>
     <div id="arControls" hidden>
       <button id="worldZeroBtn" type="button" hidden>World Zero</button>
       <button id="debugToggle" type="button" aria-pressed="false" hidden>Show Debug</button>
