Switch opencv build

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </script>
 
 
-  <script src="libs/opencv.js"></script>
+  <!-- Use the official OpenCV.js build (includes calib3d in typical builds) -->
+  <script src="https://docs.opencv.org/4.x/opencv.js"></script>
   <script type="module" src="js/main.js"></script>
 
 </head>
