--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </script>
 
 
-  <script src="libs/opencv.js"></script>
+  <script src="https://docs.opencv.org/4.x/opencv.js"></script>
   <script type="module" src="js/main.js"></script>
 
 </head>
