--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     };
   </script>
 
-  <!--<script src="libs/opencv.js"><script>-->>
-  <script src="https://docs.opencv.org/4.x/opencv.js"></script>
+  <!--<script src="https://docs.opencv.org/4.x/opencv.js"></script>-->
+  <script src="libs/opencv.js"></script>
   <script type="module" src="js/main.js"></script>
 
 </head>
