--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>SLAM-Lite</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <link rel="stylesheet" href="style.css" />
-  <script src="libs/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
+  <!-- Three.js is imported as an ES module inside js/renderer.js -->
 
   <script>
     window.__opencvReady = false;
