--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
   
     var Module = {
       locateFile: function (path) {
-        const params = new URLSearchParams(location.search);
-        const useFull = params.get('opencv') === 'full';
-        if (useFull) return `https://docs.opencv.org/4.x/${path}`;
-        // For the bundled build, keep wasm and related assets under /libs
-        return `libs/${path}`;
+        return `https://docs.opencv.org/4.x/${path}`;
       },
       onRuntimeInitialized: function () {
         console.log("OpenCV runtime initialized (Module)");
@@ -27,13 +23,11 @@
   </script>
 
   <script>
-    // Default to the bundled OpenCV.js. Add ?opencv=full to load the full OpenCV.js build from docs.opencv.org.
+    // Always load the hosted OpenCV.js build from docs.opencv.org.
     (function () {
-      const params = new URLSearchParams(location.search);
-      const useFull = params.get('opencv') === 'full';
       const s = document.createElement('script');
       s.async = true;
-      s.src = useFull ? 'https://docs.opencv.org/4.x/opencv.js' : 'libs/opencv.js';
+      s.src = 'https://docs.opencv.org/4.x/opencv.js';
       document.head.appendChild(s);
     })();
   </script>
